<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boiler Banker</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="offline_view">Offline View</string>
    <string name="title_activity_display_offline_view">Offline View</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_welcome">Welcome</string>
    <string name="transaction">Transactions</string>
    <string name="budget">Budget</string>
    <string name="settings">Settings</string>
    <string name="logout">Sign Out</string>
    <string name="title_activity_display_settings_view">Settings</string>
    <string name="offline_setting">Enable Offline View</string>
    <string name="back">Back</string>
    <string name="current_balance">Current Balance:</string>
    <string name="balance">$1234.22</string>
    <string name="recent_transaction">Chipotle</string>
    <string name="chipotle_cost">$8.77</string>
    <string name="recent_date">3/19/2013</string>
    <string name="Edit">edit</string>
    <string name="Transaction">Transaction</string>
    <string name="TransactionTitle">Transactions</string>
    <string name="title_activity_display_transaction_activities">Transactions</string>
    <string name="title_activity_display_budget">Budget</string>
    <string name="currentBalance">Current Balance:</string>
    <string name="lastBalance">Last Current Balance:</string>
    <string name="refresh">Refresh</string>

</resources>