<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context=".DisplayWelcomeActivity" >

    <Button
        android:id="@+id/transactions_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/transaction"
        android:background="#FFCC33"
        android:onClick="openTransactionActivity" />
    
    <Button
        android:id="@+id/budget_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:text="@string/budget"
        android:background="#FFCC33"
        android:onClick="openBudgetActivity" />
    
    <Button
        android:id="@+id/settings_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:text="@string/settings"
        android:background="#FFCC33" 
        android:onClick="openSettingsActivity" />
    
    <Button
        android:id="@+id/logout_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/logout"
        android:background="#FFCC33"
        android:onClick="signOutReturnToWelcome" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transactions_button"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="25dp"
        android:clickable="false"
        android:scaleType="fitXY"
        android:contentDescription="@drawable/logo2x"
        android:src="@drawable/logo2x" />

</RelativeLayout>