<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/login_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_marginBottom="41dp"
        android:onClick="openWelcome"
        android:background="#FFCC33"
        android:text="@string/login" />

    <Button
        android:id="@+id/offline_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_button"
        android:layout_alignBottom="@+id/login_button"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_marginTop="3dp"
        android:background="#FFCC33"
        android:onClick="openOfflineView"
        android:text="@string/offline_view" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/username_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/usernameTextView"
            android:layout_alignBottom="@+id/usernameTextView"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="2dp"
            android:inputType="text"
            android:ems="10" />

    	<TextView
    	    android:id="@+id/passwordTextView"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentLeft="true"
    	    android:layout_below="@+id/username_message"
    	    android:layout_marginTop="36dp"
    	    android:layout_marginLeft="2dp"
    	    android:text="@string/password" />
    	
    	<EditText
    	    android:id="@+id/password_message" 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@+id/passwordTextView"
    	    android:layout_alignBottom="@+id/passwordTextView"
    	    android:layout_alignLeft="@id/username_message"
    	    android:ems="10"
    	    android:inputType="textPassword" />

    </RelativeLayout>

</RelativeLayout>