<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context=".DisplayTransactionActivities" >
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/current_balance_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/currentBalance"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/transaction5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/transaction4"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/transaction3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/transaction4"
            android:layout_alignLeft="@+id/transaction2"
            android:layout_marginBottom="25dp"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/transaction2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/transaction3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/transaction4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/transaction5"
            android:layout_alignLeft="@+id/transaction3"
            android:layout_marginBottom="25dp"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/transaction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/transaction2"
            android:layout_alignLeft="@+id/transaction2"
            android:layout_marginBottom="25dp"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction2"
            android:layout_alignBottom="@+id/transaction2"
            android:layout_alignParentLeft="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction1"
            android:layout_alignBottom="@+id/transaction1"
            android:layout_alignParentLeft="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/date3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction3"
            android:layout_alignBottom="@+id/transaction3"
            android:layout_alignParentLeft="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/date4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction4"
            android:layout_alignBottom="@+id/transaction4"
            android:layout_alignParentLeft="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/date5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction5"
            android:layout_alignBottom="@+id/transaction5"
            android:layout_alignParentLeft="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/amount1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction1"
            android:layout_alignBottom="@+id/transaction1"
            android:layout_alignParentRight="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/amount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction2"
            android:layout_alignBottom="@+id/transaction2"
            android:layout_alignParentRight="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/amount3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction3"
            android:layout_alignBottom="@+id/transaction3"
            android:layout_alignParentRight="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/amount4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction4"
            android:layout_alignBottom="@+id/transaction4"
            android:layout_alignParentRight="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/amount5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/transaction5"
            android:layout_alignBottom="@+id/transaction5"
            android:layout_alignParentRight="true"
            android:text="@string/Transaction"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </RelativeLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="#FFCC33"
        android:minWidth="100dip"
        android:onClick="backReturnWelcome"
        android:text="@string/back" />

</RelativeLayout>